[gd_scene load_steps=7 format=3 uid="uid://dgmu6um1p5du7"]

[ext_resource type="Script" path="res://xr_origin_3d.gd" id="1_6xxde"]
[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="2_x0ky0"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="3_p7bqc"]
[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="4_xkdan"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ul1b7"]

[sub_resource type="SphereMesh" id="SphereMesh_f4npa"]
radius = 0.015
height = 0.03

[node name="XRPlayer" type="XROrigin3D"]
script = ExtResource("1_6xxde")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)
tracker = &"left_hand"

[node name="LeftHand" parent="LeftHand" instance=ExtResource("2_x0ky0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
visible = false
hand_material_override = SubResource("StandardMaterial3D_ul1b7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftHand"]
visible = false
mesh = SubResource("SphereMesh_f4npa")

[node name="GripOrigin" type="Node3D" parent="LeftHand"]

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)
tracker = &"right_hand"

[node name="RightHand" parent="RightHand" instance=ExtResource("3_p7bqc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
visible = false
hand_material_override = SubResource("StandardMaterial3D_ul1b7")

[node name="GripOrigin" type="Node3D" parent="RightHand"]

[node name="Grip" type="Node3D" parent="."]

[node name="Transform" type="Node3D" parent="Grip"]

[node name="StartXR" parent="." instance=ExtResource("4_xkdan")]

[connection signal="xr_ended" from="StartXR" to="." method="_on_start_xr_xr_ended"]
[connection signal="xr_started" from="StartXR" to="." method="_on_start_xr_xr_started"]
